BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_Discussion_vod__c.object
<CustomObject>
    <fields>
        <fullName>Interaction_Type_BMS_CN__c</fullName>
        <description>Interaction Type</description>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_Eliquis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_FORXIGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_BARACLUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive_ORENCIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_Eliquis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_FORXIGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_BARACLUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive_ORENCIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_BMS_CN__c</fullName>
        <description>Is achieved?</description>
        <label>Is Achieved ?</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Discussion record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Messages_BMS_CN__c</fullName>
        <description>Key Messages-Per Incre. shift</description>
        <label>Key Messages</label>
        <picklist>
            <controllingField>Incremental_Shift_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>Guideline recommend Glucophage as the only initial therapy for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucophage effective on FPG, PPG and HbA1c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucophage provide long-term cardiovascular protection, improve the quality of life and reduce mortality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 years experience, body weight neutral, rare hypoglycemia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucophage optimal dosage (2000mg / day) achieve maximum efficacy and lowest side effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence demonstrate that long term treatement with Glucophage provide Long-term benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_1_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_2_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_3_4_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_4_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_4_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_4_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_KeyMsg_4_3_1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Messages_OTC_BMS_CN__c</fullName>
        <label>Key_Messages OTC</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Children_KM_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_KM_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children_KM_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_KM_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_KM_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_KM_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_KM_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buf_Plus_KM_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_KM_18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_KM_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_KM_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_KM_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_KM_4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Topics_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field used on EMEA HQ interactions.</description>
        <label>Key Topic</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Brand&apos;s key messages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand&apos;s perception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company&apos;s perception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Use Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compound-related question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion on 3rd party tactics and sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Area / Therapy Area Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines &amp; Therapeutic protocols on specific Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interventional Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveys</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSL_Type_BMS__c</fullName>
        <description>Field to capture the type of MSL recording the interaction.  Used to segment reports by MSL Type.  This field is updated by a workflow rule.</description>
        <label>MSL Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_BMS_CN__c</fullName>
        <description>Material-Per Incre.shift Mon</description>
        <label>Material</label>
        <picklist>
            <controllingField>Incremental_Shift_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_1_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_2_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_1_3_8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_Achlved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_2_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_2_2_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_2_2_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_2_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_2_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_2_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_3_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_3_3_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_4_2_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_4_2_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_4_2_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_MT_4_2_4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_OTC_BMS_CN__c</fullName>
        <label>Material OTC</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP_MT_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA_MT_7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ang_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ang_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ang_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ang_MT_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJD_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJD_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJD_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN_MT_3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN_MT_4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN_MT_5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu_MT_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu_MT_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glu_MT_3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Med_Plan_Communication_Topic_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Med Plan Alignment: Communication Topic</label>
        <referenceTo>Med_Plan_Communication_Topic_BMS__c</referenceTo>
        <relationshipLabel>Interaction Discussions</relationshipLabel>
        <relationshipName>Interaction_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Communication_Topic_BMS_CN__c</fullName>
        <label>Medical Communication Topic</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Option1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixabans PK Profile with limited renal elimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy of Apixaban to prevent VTE/Death and major VTE vs enoxaparin 40 mg OD post THR/TKR Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety of Apixaban in Post THR/TKR Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing of Apixaban administration after Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burden of Atrial Fibrilation and Stroke in India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-morbidities in Atrial Fibrilation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limitations of Current Therapies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMPLIFY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARISTOTLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVERROES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPRAISE-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmet Medical needs in T2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of CV Disease Prevention in T2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Profile of Saxagliptin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative merits of glycaemic control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of a Patient Centric approach in T2D treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communicate the commitment of AZ/BMS Alliance to Med Education and Clinical Research in T2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saxagliptin Efficacy as either Monotherapy or in initial combination with Metformin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Retrospective CV Safety Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential CV Protective role of Incretin based treatments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saxagliptin as add-onto Insulin (057 study) or Saxagliptin Triple Therapy Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burden of T2D, CV risk factors, complications and CV outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Players in glucose balance including the role of the kidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limitations of current insulin-dependent therapies: Progressive beta cell failure and treatment failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holistic apporach and benefits of multi-factorial intervention in T2D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Communication_Topic_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA Core Requirements &amp; Design: Custom pick-list field to store the EMEA medical communication topics.</description>
        <label>Medical Communication Topic</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Unmet medical needs in type 2 diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of Cardiovascular Disease in type 2 diabetes and a multidisciplinary management approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS/AZ diabetes product range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical profile of saxagliptin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative merits of measures of glycaemic control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of patient-centric approach in diabetes treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favorable recommendations for DPPIV inhibitors vs SUs in the 2012 ADA/EASD position statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular safety of Saxagliptin (SAVOR data)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glycemic efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood pressure effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety and tolerability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warnings and cautions for use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical profile of exenatide once weekly (QW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of patient preference and adherence in type 2 diabetes management (QW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical profile of exenatide twice daily (BID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effects of exenatide on gastric emptying and central appetite control (BID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favorable recommendations for GLP-1 agonists in the ADA/EASD position statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact of early time to response  and depth of response on long term patient outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Importance of adherence in CML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The clinical efficacy and safety of dasatanib in CML providing practice informing information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advancing long-term patient care and treatment interruption in patients with stable CMR/&quot;functional cure&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dasatinib provides value to patients by effectively targeting the disease, reducing risk of early progression, providing early deep responses and a predictable less bothersome tolerability profile with long term follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respond to unsolicited queries on the dasatinib compound including but not limited to Ph+ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment of metastatic melanoma within guidelines and unmet medical need for patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role of ipilimumab in the treatment of pre-treated melanoma with a focus on the mode of action and the efficacy (Efficacy outcomes including the long term survival)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practical use of ipilimumab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Event associated to the Call Discussion.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipName>Call2_Discussion_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Plan_Strategy_BMS__c</fullName>
        <formula>Med_Plan_Communication_Topic_BMS__r.Medical_Strategy_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Plan Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used for mobile integration.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Call_Objective_BMS_EMEA__c</fullName>
        <description>VPRO - January 2014 - BMS EMEA CORE Requirements &amp; Design: Custom field to capture the Next Call Objective as part of the ENGAGE sequence.</description>
        <label>Next Call Objective</label>
        <picklist>
            <controllingField>zvod_Product_Map_vod__c</controllingField>
            <picklistValues>
                <fullName>Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased Understanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive Attitude / Try</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration / Extend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Customer_Feedback_BMS_CA__c</fullName>
        <description>Capture Product specific Customer Feedback</description>
        <label>Overall Customer Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Uninterested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>